chore: fix url refs, footnote placing

--- a/endangered-languages.tex
+++ b/endangered-languages.tex
@@ -76,7 +76,7 @@ Other terms used in exploring the theory of language, semiotics, or formal langu
 \subsection{Metrics for language vitality}
 \label{subsec:metrics}
 
-Language health or vitality is a topic of increasing scholarship and interest. Superficially, it makes sense to use a similar system to classify languages as one would classify biological species, using the metrics defined by the International Union for Conservation of Nature (IUCN)\footnote{\href{http://www.iucnredlist.org/}{http://www.iucnredlist.org/}}. They have nine levels of classification: Extinct, Extinct in the Wild, Critically Endangered, Endangered, Vulnerable, Near Threatened, Least Concern, Data Deficient and Not Evaluated. However, the system is not directly transferable - how would a dormant language be classified? One can see immediately that there is a need for a language-specific rating system.
+Language health or vitality is a topic of increasing scholarship and interest. Superficially, it makes sense to use a similar system to classify languages as one would classify biological species, using the metrics defined by the International Union for Conservation of Nature (IUCN).\footnote{\href{http://www.iucnredlist.org/}{http://www.iucnredlist.org/}} They have nine levels of classification: Extinct, Extinct in the Wild, Critically Endangered, Endangered, Vulnerable, Near Threatened, Least Concern, Data Deficient and Not Evaluated. However, the system is not directly transferable - how would a dormant language be classified? One can see immediately that there is a need for a language-specific rating system.
 
 It is perhaps unsurprising that there are various metrics which can be used to classify the health of a language and its community. In this section, I'll explain these metrics in detail, focusing on the GIDS, EGIDS, UNESCO, and LEI measurements, as suggested by \citet{yang2017toward} as the main players in the field.
 
@@ -87,7 +87,7 @@ The Graded Intergenerational Disruption Scale, developed by \citet{fishman1991re
 \begin{figure}
  \centering
  \includegraphics[width=.8\textwidth]{img/gids.png}
- \caption{A summary of GIDS from \citep{lewis2010assessing}}
+ \caption{A summary of GIDS from \citep[105]{lewis2010assessing}}
  \label{fig:gids}
 \end{figure}
 
@@ -109,7 +109,7 @@ Importantly, UNESCO clarifies that it does not suggest using one metric over ano
 \begin{figure}
  \centering
  \includegraphics[width=.5\textwidth]{img/unesco.png}
- \caption{The UNESCO grading for three languages \citep{brenzinger2003language}}
+ \caption{The UNESCO grading for three languages \citep[23]{brenzinger2003language}}
  \label{fig:unesco}
 \end{figure}
 
@@ -117,9 +117,9 @@ The UNESCO ratings for languages are listed in the \textit{UNESCO Atlas of the W
 
 \subsubsection{The Extended GIDS (EGIDS)}
 
-Lewis and Simons, the authors of Ethnologue \citep{lewis2009ethnologue}\footnote{Also a website available at \href{https://www.ethnologue.com/}{https://www.ethnologue.com/}.}, pointed out some of the issues with GIDS which necessitate the creation of a new standard, and which could also eclipse or inform the UNESCO rating \citep{lewis2010assessing}. First, the levels are static, and don't account for directionality on the part of a language community up or down the strata. Second, there are language types which aren't included - for instance, there isn't a supranational level for extremely well-off languages, nor is there are level for extinct or dormant languages. Thirdly, GIDS focuses on intergenerational disruption in Level 5 and down, but in Level 4 and higher it focuses more on institutions, and this isn't accounted for well enough in the framework, which primarily focuses on parents as being the primary agents of language transmissions. Finally, the lower levels are not granular enough to cover the many complexities needed for language revitalisation groups.
+Lewis and Simons, the authors of Ethnologue \citep{lewis2009ethnologue}\footnote{Also a website available at \href{https://www.ethnologue.com/}{https://www.ethnologue.com/}}, pointed out some of the issues with GIDS which necessitate the creation of a new standard, and which could also eclipse or inform the UNESCO rating \citep{lewis2010assessing}. First, the levels are static, and don't account for directionality on the part of a language community up or down the strata. Second, there are language types which aren't included - for instance, there isn't a supranational level for extremely well-off languages, nor is there are level for extinct or dormant languages. Thirdly, GIDS focuses on intergenerational disruption in Level 5 and down, but in Level 4 and higher it focuses more on institutions, and this isn't accounted for well enough in the framework, which primarily focuses on parents as being the primary agents of language transmissions. Finally, the lower levels are not granular enough to cover the many complexities needed for language revitalisation groups.
 
-EGIDS - the Expanded GIDS - serves these needs by providing more granular definitions. It also draws on the extensive knowledge of languages and their usage provided not only by Ethnologue, but also by the UNESCO Atlas and the community of linguists working with the Summer Institute of Linguistics (SIL), who fund and published Ethnologue. Figure~\ref{table:egids} shows the main categories, taken from the Ethnologue website\footnote{\href{https://www.ethnologue.com/about/language-status}{https://www.ethnologue.com/about/language-status}}. The table has been updated since \citet{lewis2010assessing}, in particular to also account for signed languages \citep{bickford2015rating}. The addition of a Level 0 and two levels beneath the scale are evident, as well as more granularity in the GIDS scale, such as can be seen with Level 6, which now has two levels, Level 6a Vigorous and Level 6b Threatened.
+EGIDS - the Expanded GIDS - serves these needs by providing more granular definitions. It also draws on the extensive knowledge of languages and their usage provided not only by Ethnologue, but also by the UNESCO Atlas and the community of linguists working with the Summer Institute of Linguistics (SIL), who fund and published Ethnologue. Figure~\ref{table:egids} shows the main categories, taken from the Ethnologue website.\footnote{\href{https://www.ethnologue.com/about/language-status}{https://www.ethnologue.com/about/language-status}} The table has been updated since \citet{lewis2010assessing}, in particular to also account for signed languages \citep{bickford2015rating}. The addition of a Level 0 and two levels beneath the scale are evident, as well as more granularity in the GIDS scale, such as can be seen with Level 6, which now has two levels, Level 6a Vigorous and Level 6b Threatened.
 
 \begin{table}
 \begin{center}
@@ -140,7 +140,7 @@ EGIDS - the Expanded GIDS - serves these needs by providing more granular defini
 10 	& Extinct &  	The language is no longer used and no one retains a sense of ethnic identity associated with the language. \\ \hline
 \end{tabular}
 \end{center}
-\caption{Expanded Graded Intergenerational Disruption Scale}
+\caption{Expanded Graded Intergenerational Disruption Scale \citep{ethnologuewebsite}}
 \label{table:egids}
 \end{table}
 
@@ -149,7 +149,7 @@ EGIDS - the Expanded GIDS - serves these needs by providing more granular defini
 \begin{figure}
  \centering
  \includegraphics[width=.8\textwidth]{img/egids-up.png}
- \caption{A summary of EGIDS ascending levels from \citep{lewis2010assessing}}
+ \caption{A summary of EGIDS ascending levels \citep[117]{lewis2010assessing}}
  \label{fig:egids-up}
 \end{figure}
 
@@ -162,7 +162,7 @@ ethnocultural  community  and  to  differentiate  between  life-threatening  and
 
 \subsubsection{The Language Endangerment Index (LEI)}
 
-Just as EGIDS expanded on GIDS, the Language Endangerment Index (LEI) was formed to resolve some of the issues with EGIDS, as well as to respond to GIDS, the UNESCO rating, and the rating in \citet{krauss2007classification}, another metric which focused almost exclusively on different ages of speakers and classified all languages with children speakers as 'stable', and all with over a million speakers as 'safe'. \citet{lee2016assessing} describe LEI for its use in The Catalogue of Endangered Languages (ELCat), part of the Google-powered Endangered Languages Project\footnote{\href{endangeredlanguages.com}{endangeredlanguages.com}}. The project isn't only sponsored by Google, but also by an American governmental National Science Foundation (NSF) grant\footnote{\href{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}}, and is an ambitious project (like UNESCO and Ethnologue) to catalogue all languages and to provide specific metrics of language vitality.
+Just as EGIDS expanded on GIDS, the Language Endangerment Index (LEI) was formed to resolve some of the issues with EGIDS, as well as to respond to GIDS, the UNESCO rating, and the rating in \citet{krauss2007classification}, another metric which focused almost exclusively on different ages of speakers and classified all languages with children speakers as 'stable', and all with over a million speakers as 'safe'. \citet{lee2016assessing} describe LEI for its use in The Catalogue of Endangered Languages (ELCat), part of the Google-powered Endangered Languages Project.\footnote{\href{endangeredlanguages.com}{endangeredlanguages.com}} The project isn't only sponsored by Google, but also by an American governmental National Science Foundation (NSF) grant\footnote{\href{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}}, and is an ambitious project (like UNESCO and Ethnologue) to catalogue all languages and to provide specific metrics of language vitality.
 
 The authors, in describing LEI, go into detail explaining how previous classifications, while they "highlight[s] the immensity of the problem at hand", can not easily apply to certain languages, and that these exceptions are critical to understanding whether the metrics are useful as opposed to being exceptions which prove the rule. Unlike the other papers, they explicitly mention some languages. For instance, they mention how \citet{dwyer2012tools} points out that Wutun, a Chinese-Tibetan-Mongolic language, is endangered due to a variety of factors, even if transgenerational transmission is not at risk - thus, GIDS or EGIDS may not satisfactorily categorise the language. A similar case could be made for Naskapi (see Section~\ref{sec:naskapi} for more on this).
 
@@ -229,7 +229,7 @@ In a follow-up paper, \citep{kornai2015new} proposed adding a single number scal
 
 \citet{gibson2016assessing} extends Kornai by adding two separate statuses for languages - that of {\it Emergent} and {\it Latent}. Emergent languages are those where there is data, but it is privately hidden in messaging applications or cellphone usage, and unlikely to be accessible by the crawlers and corpora agglomeration tools used in \citet{kornai2013digital}. These would be identified by researchers in the field, and do not need to have locale or i18n setups before inception. Gibson cites Arabizi (as noted by \citet{darwish2013arabizi}), where numbers are used for sounds not present in standard Arabic, as an example; another might be the use of a forward slash to denote accents in early Irish Gaelic forums, as noted by \citet{scannell2007crubadan}. Latent languages are languages which meet the following criteria: "stable intergenerational transmission of the language, an available model of writing the language, the availability of appropriate technology and infrastructure (internet, mobile phone coverage), fonts in which to write the language in the desired script, and communal desire to see the language used digitally." If all of these are met, then the language could ascend beyond still into vital. Such languages would be admittedly impossible to find by measurements, but this category would be helpful for linguists working in the field to determine how to best work with the language community to help bootstrap language development. Gibson also redefined {\it Still}, which \citet{kornai2013digital} had marked as languages which are 'unable' to ascend, while here they are merely 'unlikely'.
 
-A more recent metric was also introduced in a draft by \citet{soria2017digital}, for the purposes of helping digital language planning for the EU, as part of the Digital Language Diversity Project \footnote{\href{http://www.dldp.eu/content/reports-digital-language-diversity-europe}{http://www.dldp.eu/content/reports-digital-language-diversity-europe}}. Their scale has the following states: {\it Pre-digital}, {\it Dormant}, {\it Emergent}, {\it Developing}, {\it Vital}, and {\it Thriving}. Like Gibson, they exclude Kornai's {\it Heritage} status (oddly noting that Gibson also included it, which he hadn't for the same grounds), without sufficient explanation as to why dead languages are not relevant when there are communities based around them, some of which are communities with thousands of L2 speakers. %(NOTE: Write a paper about this. %TODO: Remove this comment after review from Alexis).
+A more recent metric was also introduced in a draft by \citet{soria2017digital}, for the purposes of helping digital language planning for the EU, as part of the Digital Language Diversity Project.\footnote{\href{http://www.dldp.eu/content/reports-digital-language-diversity-europe}{http://www.dldp.eu/content/reports-digital-language-diversity-europe}} Their scale has the following states: {\it Pre-digital}, {\it Dormant}, {\it Emergent}, {\it Developing}, {\it Vital}, and {\it Thriving}. Like Gibson, they exclude Kornai's {\it Heritage} status (oddly noting that Gibson also included it, which he hadn't for the same grounds), without sufficient explanation as to why dead languages are not relevant when there are communities based around them, some of which are communities with thousands of L2 speakers. %(NOTE: Write a paper about this. %TODO: Remove this comment after review from Alexis).
 Dormant would be equitable to Latent, while Pre-digital would apply to languages without internet or cell connectivity for the speaking population. Emergent through Thriving are largely matters of scale. While Kornai used proxies for the five factors he mentioned, Soria et al. note that such factors are difficult to quantify; they remedy this by focusing on three indicators: "a group pertaining to a language digital {\it capacity} [sic], a group related to a language digital {\it presence and use}, and a group related to a language digital {\it performance}." \citep[5]{soria2017digital} An example of how these are used can be seen in Figure~\ref{fig:dldp}.
 
 \begin{figure}
@@ -239,7 +239,7 @@ Dormant would be equitable to Latent, while Pre-digital would apply to languages
  \label{fig:dldp}
 \end{figure}
 
-Soria et al. go into depth about each of these factors. As an example, for localised software, they propose the following scale in Table~\ref{table:dldp-software}. They explain, for each scale, how to find information - for instance, they suggest asking local researchers and community members about the usage of "Windows, Mac OS X, Linux, Android, iOS, Microsoft Office, LibreOffice, Firefox, Chrome, Internet Explorer, Thunderbird, Adobe Creative Suite, Gimp" for judging localised software. However, they do not show metrics on any languages judged according to this scale, and they don't make it clear whether or not the different metrics ought to be summed to come up with a single number (an issue which \citet{lee2016assessing} raised with the UNESCO rating). In conclusion, while this is an interesting and in-depth metric, its wider applicability is not clear.
+\citet{soria2017digital} go into depth about each of these factors. As an example, for localised software, they propose the following scale in Table~\ref{table:dldp-software}. They explain, for each scale, how to find information - for instance, they suggest asking local researchers and community members about the usage of "Windows, Mac OS X, Linux, Android, iOS, Microsoft Office, LibreOffice, Firefox, Chrome, Internet Explorer, Thunderbird, Adobe Creative Suite, Gimp" for judging localised software. However, they do not show metrics on any languages judged according to this scale, and they don't make it clear whether or not the different metrics ought to be summed to come up with a single number (an issue which \citet{lee2016assessing} raised with the UNESCO rating). In conclusion, while this is an interesting and in-depth metric, its wider applicability is not clear.
 
 \begin{table}
 \begin{center}
@@ -252,7 +252,7 @@ strong & 5 & Most used operating systems and general purpose software localised 
 advanced & 6 & Main operating systems and application software localised in the language.  \\ \hline
 \end{tabular}
 \end{center}
-\caption{Scale for Localised Software}
+\caption{Scale for Localised Software \citep[21]{soria2017digital}}
 \label{table:dldp-software}
 \end{table}
 
