--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,12 @@
+% This is how you cite websites
+@misc{ethnologuewebsite,
+  title={Language status | {Ethnologue}},
+  howpublished={https://www.ethnologue.com/about/language-status},
+  year={2018},
+  author={Lewis, M Paul and Simons, Gary F and Fennig, Charles D and others},
+  note={Last accessed on April~24, 2018.}
+}
+
 @inproceedings{scannell2007crubadan,
   title={The Cr{\'u}bad{\'a}n Project: Corpus building for under-resourced languages},
   author={Scannell, Kevin P},
@@ -17,10 +26,9 @@
 @article{fitzjohn2014reproducible,
   title={Reproducible research is still a challenge},
   author={FitzJohn, Rich and Pennell, Matt and Zanne, Amy and Cornwell, Will},
-  journal={URL http://ropensci. org/blog/2014/06/09/reproducibility},
+  journal={http://ropensci.org/blog/2014/06/09/reproducibility},
   year={2014}
 }
-
 
 @misc{AustinPrinciples2017,
   author = {Andrea L. Berez-Kroeker and Helene N. Andreassen and
@@ -124,10 +132,8 @@
 @misc{ghosh2002free,
   title={Free/libre and open source software: Survey and study},
   author={Ghosh, Rishab A and Glott, Ruediger and Krieger, Bernhard and Robles, Gregorio},
-  year={2002},
-  publisher={Part iv:" Survey of developers". http://www. infonomics. nl/FLOSS/report/FLOSS\_Final4. pdf}
+  year={2002}
 }
-
 
 @article{lowndes2017our,
   title={Our path to better science in less time using open data science tools},
@@ -418,7 +424,8 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
   title={{UNESCO} Atlas of the World's Languages in Danger},
   author={UNESCO, Atlas},
   year={2014},
-  publisher={See http://www. unesco. org/culture/languages-atlas/(accessed 19 October 2014)}
+  note={Last accessed October~19, 2014.},
+  howpublished={http://www.unesco.org/culture/languages-atlas/}
 }
 
 @book{lewis2009ethnologue,
@@ -494,16 +501,16 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @misc{unesco11directory,
-    author = {UNESCO},
-    title = {Directory International cooperation programs for the protection and promotion of languages and linguistic diversity},
-    year = {2011},
-    note={Accessible at \href{http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf}{http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf}}
+  author = {UNESCO},
+  title = {Directory International cooperation programs for the protection and promotion of languages and linguistic diversity},
+  year = {2011},
+  note={Accessible at \href{http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf}{http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf}}
 }
 
 @article{brenzinger2003language,
  title={Language vitality and endangerment},
  author={Brenzinger, Matthias and Yamamoto, Akira and Aikawa, Noriko and Koundiouba, Dmitri and Minasyan, Anahit and Dwyer, Arienne and Grinevald, Colette and Krauss, Michael and Miyaoka, Osahito and Sakiyama, Osamu and others},
- journal={Paris: UNESCO Intangible Cultural Unit, Safeguarding Endangered Languages. http://www. unesco. org/culture/ich/doc/src/00120-en. pdf. Last accessed July},
+ journal={Paris: UNESCO Intangible Cultural Unit, Safeguarding Endangered Languages},
  volume={1},
  pages={2010},
  year={2003}
@@ -1019,11 +1026,11 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @misc{spice,
-author={Spice, B.},
-year={2012},
-title="Carnegie Mellon releases data on Haitian Creole to hasten development of translation tools.",
-url={http://www.eurekalert.org/pub_releases/2010-01/cmu-cmr012710.php},
-note={[Online, accessed 27-August-2012]}
+  author={Spice, B.},
+  year={2012},
+  title={{Carnegie Mellon} releases data on {Haitian Creole} to hasten development of translation tools},
+  howpublished={\href{http://www.eurekalert.org/pub_releases/2010-01/cmu-cmr012710.php}{http://www.eurekalert.org/pub\_releases/2010-01/cmu-cmr012710.php}},
+  note={Last accessed August~27, 2012}
 }
 
 @book{phoible,
@@ -1124,7 +1131,7 @@ note={[Online, accessed 27-August-2012]}
  location = {Edinburgh, Scotland},
  pages = {501--511},
  numpages = {11},
- url = {http://dl.acm.org/citation.cfm?id=2132960.2133030},
+ url = {\href{http://dl.acm.org/citation.cfm?id=2132960.2133030}{http://dl.acm.org/citation.cfm?id=2132960.2133030}},
  acmid = {2133030},
  publisher = {Association for Computational Linguistics},
  address = {Stroudsburg, PA, USA},
@@ -1163,25 +1170,25 @@ note={[Online, accessed 27-August-2012]}
 @misc{ager2008omniglot,
   title={Omniglot writing systems and languages of the world},
   author={Ager, Simon},
-  url={http://omniglot.com},
-  note={[Online; accessed April 17, 2018]},
+  howpublished={http://omniglot.com},
+  note={Last accessed April~17, 2018]},
   year={2018}
 }
 
 
 @misc{wiki:Wikipedia,
-  author = "{Wikipedia contributors}",
-  title = "Wikipedia --- {W}ikipedia{,} The Free Encyclopedia",
+  author ={Wikipedia contributors},
+  title ={Wikipedia --- {W}ikipedia{,} The Free Encyclopedia},
   year = "2018",
-  url = "https://en.wikipedia.org/wiki/Wikipedia",
-  note = "[Online; accessed April 17 2018]"
+  howpublished = "https://en.wikipedia.org/wiki/Wikipedia",
+  note = "Last accessed April~17, 2018"
 }
 
 
 @article{hammarstrom2015glottolog,
   title={Glottolog 2.3},
   author={Hammarstr{\"o}m, Harald and Forkel, Robert and Haspelmath, Martin and Bank, Sebastian},
-  journal={Leipzig: Max Planck Institute for Evolutionary Anthropology. Available online at http://glottolog. org},
+  journal={Leipzig: Max Planck Institute for Evolutionary Anthropology. Available online at http://glottolog.org},
   year={2015}
 }
 
